# UnderanalyzerRS

./: .gitignore  Cargo.toml  README.md  build.rs
csharp/: UnderanalyzerRS.csproj
csharp/FFI/: DecompileSettings.cs  Exports.cs
csharp/FFI/Bytecode/: Code.cs  Function.cs  Instruction.cs  Variable.cs
csharp/FFI/GameContext/: Builtins.cs  GameContext.cs
csharp/FFI/Primitives/: Array.cs  CsString.cs  RustString.cs
src/: dynlib.rs  gamemaker.rs  lib.rs  main.rs  primitives.rs
src/gamemaker/: code.rs  function.rs  game_context.rs  instruction.rs  variable.rs
src/primitives/: array.rs  csstring.rs  ruststring.rs
