[package]
name = "underanalyzer"
version = "0.0.0"
authors = ["BioTomateDE"]
edition = "2024"
description = "Rust bindings for the C# library Underanalyzer (GameMaker Language decompilation)"
readme = "README.md"
repository = "https://github.com/BioTomateDE/UnderanalyzerRS"
license = "GPL-3.0"
keywords = ["gamemaker", "gml", "decompilation", "csharp", "bindings"]
categories = ["api-bindings"]

[dependencies]
libloading = "0.9.0"
tempfile = "3.25.0"

[dependencies.libgm]
version = "*"
